--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "hurgusburgus",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.2.0",
+    "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
