--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,21 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "targets": [
-                    "last 3 chrome version",
-                    "last 3 firefox version",
-                    "last 3 safari version"
-                ]
-            }
-        ],
-        "@babel/preset-typescript",
-        "@babel/preset-react"
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": [
+          "last 3 chrome version",
+          "last 3 firefox version",
+          "last 3 safari version"
+        ]
+      }
     ],
-    "plugins": [
-        "@babel/proposal-class-properties",
-        "@babel/proposal-object-rest-spread"
-    ]
+    "@babel/preset-typescript",
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread",
+    "babel-plugin-styled-components"
+  ]
 }
