--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@apollo/client": "^3.2.0",
     "graphql": "^15.3.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -27,9 +29,12 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "css-loader": "^4.3.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.2.0",
