--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.10.0",
+    "axios": "^0.21.1",
     "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -30,6 +33,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/js-cookie": "^2.2.6",
     "@types/material-ui": "^0.21.8",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
